# Lab09_Normal_maps

./: .gitignore  CMakeLists.txt
objects/: flat_plane.mtl  wall.mtl
source/: Lab09_Normal_maps (ASN-ACA-M-1119's conflicted copy 2024-04-15)  camera.cpp  camera.hpp  fragmentShader.frag  lightFragmentShader.frag  lightVertexShader.vert  main.cpp  model.cpp  model.hpp  shader.cpp  vertexShader.vert
